# django-users

./: .gitignore  MANIFEST.in  MIGRATING.md  README.md  README.txt  admin.py  api.py  api_keycloak.py  default_roles_and_disciplines.py  forms.py  keycloak.py  keycloak_tools.py  models.py  pyproject.toml  requirements.txt  serializers.py  setup.py  urls.py  views.py
django-users/: README.txt  admin.py  api.py  forms.py  models.py  serializers.py  utils.py  views.py
django_users/: README.md  admin.py  api.py  api_keycloak.py  apps.py  checks.py  forms.py  helpdesk.py  keycloak.py  keycloak_models.py  middleware.py  models.py  no_keycloak.py  notifications.py  ref.py  serializers.py  urls.py  urls_api.py  utils.py  views.py  zammad_service.py  zammed.py  zammed_service.py
django_users/migrations/: 0001_initial.py  0005_commschannel_note_commschannel_verified_by_and_more.py
django_users/templates/: add_channel.html  change_password.html  change_profile.html  forgot_password.html  include_login_form.html  login.html  problem_login.html  problem_signup.html  profile.html  qr_login.html  register.html  signin.html  user_contact_analytics.html  users_narrow_base.html  verify.html  verify_channel.html
django_users/tools/: auth.py  exceptions.py  model_mixins.py  permission_mixins.py  permissions.py  (+3 more)
example/: manage.py
migrations/: 0001_initial.py  0002_alter_role_role_type.py  0003_alter_organisation_settings_alter_role_role_type.py  0004_commschannel_verificationcode_and_more.py
templates/: accept_invitation.html  invitation_invalid.html
tests/: test_views.py
(+84 files in other folders)
